more dissertation, methodology

--- a/Final Year Project Dissertation/methodology.tex
+++ b/Final Year Project Dissertation/methodology.tex
@@ -1,5 +1,5 @@
 \chapter{Methodology}
-As mentioned in the introduction above, i looked at my weekly life as inspiration in deciding what type of application i will be making for my final year project.
+As mentioned in the introduction above, i looked at my weekly life as inspiration in deciding what type of application i will be making for my final year project. I looked at my place of work in retail in which i have five years experience. I looked at the day to day operations of the shop to see could i find anything that would save time and money. My idea of a Date Control System saves time for staff when looking for items on the shop floor, they could just look at this application that would be linked to the shops stock database to show when products are close, on or past their sell by date, giving staff members the edge in finding all they need, whereas if it's done manually in person a staff member may miss something, putting a customer at risk of buying an out of date product. This idea also saves the shop money as in the sense it gives staff members time to possibly take the product off the shelf and reduce it so the shop could make some money on the item instead of just wasting it or getting very little in credit from the supplier.
 \newline
 
 \subsection{Software Development v/s Research Methodology}
@@ -9,3 +9,4 @@ As mentioned in the introduction above, i looked at my weekly life as inspiratio
 \subsection{Validating \& Testing}
 
 \subsection{GitHub and Dev Tools}
+To develop this project i created a repository on GitHub and cloned the repository to my computer desktop. I then opened the folder in the command prompt window and installed the relevant libraries, modules and add-ons for the ionic firebase application i planned to create. When the relevant npm(angular cmd command) installs were completed i then needed to open the IDE for the software development. After creating the ionic project i went into the project directory and opened the project in Visual Studio Code using the command 'code .'. I could of used a range of different IDEs to do my project but Visual Studio Code was my preference due to my experience using it during the 4 years of the course and because its my go to editor. Not to mention Firebase was my choice of database to store Authentication data and product data.
