--- a/Final Year Project Dissertation/references.bib
+++ b/Final Year Project Dissertation/references.bib
@@ -9,6 +9,12 @@
 	publisher={Nature Publishing Group}
 }
 
+%citations:
+% https://www.sciencedirect.com/science/article/pii/S0956053X14002694
+% https://www.madr.ro/docs/ind-alimentara/risipa_alimentara/presentation_food_waste.pdf
+% https://pub.epsilon.slu.se/9264/
 
+
+%other refs:
 % https://miro.medium.com/max/3336/1*YMFKP8e6kR9cbM3IKXBtLw.png
 
