--- a/Final Year Project Dissertation/introduction.tex
+++ b/Final Year Project Dissertation/introduction.tex
@@ -10,7 +10,7 @@ The Final Year Project, a chance for myself to culminate what i have learned in 
 
 \newpage
 
-When deciding on what type of project and application to pursue, i wanted to integrate it into something involved in my weekly life. My part time job as a Sales Assistant benefited me in making a decision on what type of project to do. I looked into the everyday functionality of the shop and after working there for just under 5 years i was very experienced in knowing the day to day operations of the store. I looked at different ways i can make the staffs job easier and at the same time, save the shop money by creating this application. 
+When deciding on what type of project and application to pursue, i wanted to integrate it into something involved in my weekly life. My part time job as a Sales Assistant benefited me in making a decision on what type of project to do. I looked into the everyday functionality of the shop and after working there for just under 5 years i was very experienced in knowing the day to day operations of the store. I looked at different ways i can make the staffs job easier and at the same time, save the shop money by creating this application. I also used Google Scholars to gather more information on this problem in retail and will be referencing the citations throughout the dissertation. Here is a article citation that gave information about the amount of food loss in the industry and the problem i wish to solve with this application is to reduce this number by getting to a product in time to use elsewhere in the store such as the deli or even reduce the item. \cite{lebersorger2014food}
 \newline
 
 When deciding on a technology to use, i wanted to use what suited me for the system design and development stage. I wanted to choose a database for data storage that i was familiar with and what made my life easier. What IDE will i use to code my project. There were so many available but ultimately i chose the one that suited me and the project combined. I also needed to pick a database service to work of, Amazon Web Service (AWS), Firebase, MongoDB and Microsoft Azure all come to mind as during this course i encountered all of these some for assignments and some for personal projects which i have done during the tenure of this course. I had a decision to make, the decision had to make sense for me and for the project itself, what elements of each would benefit me and the functionality of the software development.
