--- a/Final Year Project Dissertation/main.tex
+++ b/Final Year Project Dissertation/main.tex
@@ -88,10 +88,9 @@
 \include{sysdesign}
 \include{sysevaluation}
 \include{conclusion}
-\include{appendices}
 \include{references}
 
 %----------------------------------------------------------------------------------------
 \bibliographystyle{unsrt}
-\bibliography{references.bib}
+\bibliography{bib.bib}
 \end{document}
