--- a/Final Year Project Dissertation/techreview.tex
+++ b/Final Year Project Dissertation/techreview.tex
@@ -7,12 +7,67 @@
 	\centering
 	\includegraphics[width=0.8\textwidth]{images/quote1.PNG}
 \end{figure}
-With new ideas comes an influx of questions, the main two being the how and the why. How this idea came about ? this idea came about after five years of working part-time in retail. Looking at the day to day operations of the shop and what can i try and improve with what i have learned in college for four years, in this case i highlighted one area of the shop that i could integrate into my final year project and that is to develop an application to ease the burden of Date Checking for my fellow staff members. The human eye cannot spot everything, this would save time and money for the staff and shop as a whole respectively. The good thing also about this idea is the fact that it can be very flexible and can be made into various different types of applications with minor tweaks. This is a major characteristic that companies and retailers demand, versatility. It can help in many different ways. %more
+
+With new ideas comes an influx of questions, the main two being the how and the why. How this idea came about ? this idea came about after five years of working part-time in retail. Looking at the day to day operations of the shop and what can i try and improve with what i have learned in college for four years, in this case i highlighted one area of the shop that i could integrate into my final year project and that is to develop an application to ease the burden of Date Checking for my fellow staff members. The human eye cannot spot everything, this would save time and money for the staff and shop as a whole respectively. The good thing also about this idea is the fact that it can be very flexible and can be made into various different types of applications with minor tweaks. This is a major characteristic that companies and retailers demand, versatility. It can help in many different ways.
+\newline
+
+So why this particular application and why would it be purposeful in the industry of retail. This interesting piece \cite{gustavsson2011global} provides incentive information about the global food wastage problem, this application will address this issue not just locally but globally. This piece proves it is an issue worldwide and with this application i hope that it can be a massive help in reducing this worrying statistic and flatten the curve of this problem as food wastage is still on the rise. This will help staff in finding the products before they go out of date and take action. Be it reducing that particular item or using that product for something in the shop, for example identifying a packet of sausages or rashers and putting giving them to the deli staff to cook and sell in the hot deli. This is a norm in the shop i currently work in part time and i feel this is making a difference however more can be done like always. Of course you are not going to be able to give every product close to it's sell by date to the deli or reduce it. This isn't going to solve the issue entirely but help it as much as it can. 
 
 \subsection{Beneficial and Sufficient}
-Before pursuing a Date Control Application for Retail i wanted to know would it be benefiicial to staff members and superiors in the workplace. I conducted a minor survey enclosed within my workplace to get some feedback for this potential idea. Which i will show the results in the Surveys section below. %more
+Before pursuing a Date Control Application for Retail i wanted to know would it be beneficial to staff members and superiors in the workplace. I conducted a minor survey enclosed within my workplace to get some feedback for this potential idea. Which i will show the results in the Surveys section below. I personally believe this application idea will be very beneficial and sufficient for retailers across the country and even beyond and the good thing about this application is that it is not intense or in anyway complicated it is basic and easy to use for the staff member or user. It is not made to look exquisite it is made to solve or help an global issue in food wastage and to save shops time and money.
+\newline
 
-\subsection{Surveys}
+Outside of retail can this be beneficial and sufficient to other industries or organisations ? I very much think so. I feel it can be beneficial to the likes of charities and food banks. Items that may not be eligible for returns for credits can be donated to food banks or charities or even compost companies. \cite{riches1986food} Here is an interesting read on food banks and the welfare crisis in which it looks at the benefits of food banks for society. This is one of the many reasons why food wastage is a global issue that i hope this basic but sufficient application can address and aid in diluting these issues. 
+\newline
+
+\begin{figure}[h!]
+	\caption{CBE Provides Shop Databases and Tills}
+	\label{image:cbe}
+	\centering
+	\includegraphics[width=0.35\textwidth]{images/cbe.jpg}
+\end{figure}
+
+The purpose of this application other than helping the retailers directly is offering this idea or application to my local retail database and till provider known as CBE. They control the inventory of the shops and provide the retailers with modern day tills all across connacht. Having five years experience with their system i know that they don't offer the idea that i am trying to implement. I can see this being very beneficial and suffiecnet to them in saving them time and money and providing an extra service to their loyal customers. \newline
+Here are some images on the permission of my superiors of the CBE Database system of where the stock is recorded as waste or returns:
+
+\begin{figure}[h!]
+	\caption{CBE's System in my workplace 1:}
+	\label{image:mace1}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/mace1.PNG}
+\end{figure}
+
+\begin{figure}[h!]
+	\caption{CBE's System in my workplace 2:}
+	\label{image:mace2}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/mace2.PNG}
+\end{figure}
+
+\begin{figure}[h!]
+	\caption{CBE's System in my workplace 3:}
+	\label{image:mace3}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/mace3.PNG}
+\end{figure}
+
+\begin{figure}[h!]
+	\caption{CBE's System in my workplace 4:}
+	\label{image:mace4}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/mace4.PNG}
+\end{figure}
+
+\begin{figure}[h!]
+	\caption{CBE's System in my workplace 5:}
+	\label{image:mace5}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/mace5.PNG}
+\end{figure}
+\newpage
+As you can see in the images above, this is an example taken from the shop i work in. The system provided by CBE that gives reports, wastage, returns details and so on. You can also enter in the delivery dockets here to keep track of your stock but what i am trying to implement is not here. As humans we are expected to find the products that are close or past their sell by date, customers may have a better eye than us and find products that we missed and purchase them deeming them ineffective or dangerous for consumption. My application helps address this existing issue and prevents customer harm and helps the retailers save money and being able to act quickly. To conclude i do believe this application is beneficial and sufficient and based on the survey results my fellow staff members and superiors also think so. 
+
+\subsection{Surveys \& Results}
 
 \subsection{Planning Project}
 
@@ -36,7 +91,7 @@ The Technologies i used to develop my idea were as follows:
 	\centering
 	\includegraphics[width=0.5\textwidth]{images/ionic.png}
 \end{figure}
-Ionic - The programming language in which i coded my project. For  the four years of software development course in GMIT i studied various different languages such as Java, C++, C, C Sharp, Python, Ruby and many more. I initially decided to got with using Angular as my programming language for my final year project, however it was giving me various issues and i didn't like the way it was turning out so i decided to code this project using the ionic programming language framework.
+Ionic - The programming language in which i coded my project. For  the four years of software development course in GMIT i studied various different languages such as Java, C++, C, C Sharp, Python, Ruby and many more. I initially decided to got with using Angular as my programming language for my final year project, however it was giving me various issues and i didn't like the way it was turning out so i decided to code this project using the ionic programming language framework. \cite{cheng2018build} Here is an in depth description of building an Ionic Firebase application that i came across in third year that helped me and my project partner in getting started. 
 \newline
 
 Ionic enables you to develop applications using web technologies and languages like HTML, CSS, JavaScript, Angular, and TypeScript. Consider Ionic as a front-end software development kit (SDK) for creating a blend of applications. Ionic provides a collection of components that imitate the native look, feel and functionality of each platform, mainly known for mobile applications but also considered for web applications also, the flexibility of Ionic Framework is why i made the decision to switch and the fact that in my opinion it suits what i in-visioned when sketching the pages i wanted and how they look for the user. Examples of these components include buttons, tabs, menus, lists, cards, modals, and so on. However for colors it is not so broad, but they suited what i was trying to implement. At the end of the day this application was not created to look pretty it was created to solve a problem in the work place, a Date Control Problem.
@@ -57,7 +112,7 @@ Out of the four years of studying software development, Ionic and Angular stood 
 
 \begin{figure}[h!]
 	\caption{All Project Items are on GitHub and can be cloned.}
-	\label{image:github}
+	\label{image:github1}
 	\centering
 	\includegraphics[width=0.4\textwidth]{images/github.png}
 \end{figure}
