dissertation almost complete, just conclusion, refs and a read over

--- a/Final Year Project Dissertation/bib.bib
+++ b/Final Year Project Dissertation/bib.bib
@@ -37,8 +37,18 @@
   publisher={Springer}
 }
 
+@misc{nakano2006food,
+  title={Food information management system},
+  author={Nakano, Shigeru},
+  year={2006},
+  month=aug # "~22",
+  publisher={Google Patents},
+  note={US Patent 7,096,221}
+}
+
 %citations:
 % https://www.sciencedirect.com/science/article/pii/S0956053X14002694
 % https://www.madr.ro/docs/ind-alimentara/risipa_alimentara/presentation_food_waste.pdf
 % https://pub.epsilon.slu.se/9264/
 % https://books.google.ie/books?hl=en&lr=&id=BW9CEBIslSQC&oi=fnd&pg=PA3&dq=food+banks&ots=6Jx7-BqlcO&sig=CZUNXXHeAN1tKd0K1QvdtaoGiwk&redir_esc=y#v=onepage&q=food%20banks&f=false
+% https://patents.google.com/patent/US7096221B2/en
