--- a/Final Year Project Dissertation/techreview.tex
+++ b/Final Year Project Dissertation/techreview.tex
@@ -74,7 +74,23 @@ Here are some images on the permission of my superiors of the CBE Database syste
 
 As you can see in the images above, this is an example taken from the shop i work in. The system provided by CBE that gives reports, wastage, returns details and so on. You can also enter in the delivery dockets here to keep track of your stock but what i am trying to implement is not here. As humans we are expected to find the products that are close or past their sell by date, customers may have a better eye than us and find products that we missed and purchase them deeming them ineffective or dangerous for consumption. My application helps address this existing issue and prevents customer harm and helps the retailers save money and being able to act quickly. To conclude i do believe this application is beneficial and sufficient and based on the survey results my fellow staff members and superiors also think so. 
 
-\subsection{Surveys \& Results}
+\subsection{Minor Survey}
+In order to prove the idea of implementing a Date Control Application into the workplace is a good idea and will benefit and not hinder staff members, i conducted a short survey, as you can see in the Fig below.
+
+\begin{figure}[h!]
+	\caption{Short Survey for Colleagues at work.}
+	\label{image:survey}
+	\centering
+	\includegraphics[width=0.8\textwidth]{images/AF-Date-Control-Survey.PNG}
+\end{figure}
+
+This more or less is a second opinion in creating this application. Hearing different opinions being positive or negative is always good. Even if a negative response is given, it will highlight the pros and cons of this application in a more controlled environment. Does that person think it will benefit them, are they a fan of technology, they may prefer physically looking themselves rather than using an application to find things even if it may take longer in which in creating this application i am trying to save my fellow staff members time with the implementation of this application into the workplace, however everyone is entitled to their opinion. 
+\newline
+
+This was a major factor in the making and outcome of the application as it gave me more information on what to implement and not implement. I needed to make this application easy to use and understand and to make the application functionality not too complex, making it quick and easy to use for staff and managers. This survey helped in getting a second opinion from someone working in the same role as me. I obviously got opinions from fellow students and my supervisor which were relevant but to get feedback from those who will mainly be using this application was vital in the making of this application and to get an opinion from those who will be using it.
+\newline
+
+The results from this survey are in the system evaluation section of this dissertation. 
 
 \subsection{Planning The Project}
 The Planning of this project took place in the first semester for final year where we were told who our project supervisors would be. Once we were told who our supervisors would be i agreed to meet with my supervisor once a week. I am in full support of the provision of supervisors for the Applied Project and Minor Dissertation as it benefited me hugely in the planning of this project. 
